# track-corn-mission

./: PC_to_ERP42.py  README.md
autonomous-vehicle-MDS/: README.md  teb_local_planner_params.yaml
autonomous-vehicle-MDS/adaptive_clustering/: CMakeLists.txt
autonomous-vehicle-MDS/adaptive_clustering/launch/: adaptive_clustering.launch  mapviz.launch
autonomous-vehicle-MDS/adaptive_clustering/msg/: Bboxes2d.msg
autonomous-vehicle-MDS/adaptive_clustering/scripts/: model_predictive_trajectory_generator.py  motion_model.py  parking.py  path_obstacle.py  test.py  test_path.py
autonomous-vehicle-MDS/adaptive_clustering/src/: adaptive_clustering.cpp  pointcloud_ROI.cpp
autonomous-vehicle-MDS/darknet_ros/darknet/: Makefile
autonomous-vehicle-MDS/gps_global_planner/: CMakeLists.txt  README
autonomous-vehicle-MDS/gps_global_planner/src/: RAstar_ros.cpp  RAstar_ros.h
autonomous-vehicle-MDS/stauto_control/: CMakeLists.txt
autonomous-vehicle-MDS/stauto_control/src/: ERP42_to_PC.py  PC_to_ERP42.py  control (copy).py  control.py  global_path_planner.py  path_plan_test.cpp
autonomous-vehicle-MDS/stauto_core/: CMakeLists.txt  package.xml
autonomous-vehicle-MDS/stauto_sensor/: CMakeLists.txt
navigation/fake_localization/: fake_localization.cpp
teb_local_planner_tutorials/cfg/: amcl_params.yaml
teb_local_planner_tutorials/launch/: robot_carlike_in_stage.launch
teb_local_planner_tutorials/maps/: empty_box.yaml
teb_local_planner_tutorials/stage/: maze_carlike.world
velodyne_height_map_occupancy_map/src/: heightmap.cpp  heightmap_to_costmap.cpp
(+64 files in other folders)
